--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,6 @@
 sudo: false
 language: python
-python:
-        - 2.7
-        - 3.4
-        - 3.5
+python: 2.7
 install:
         - python setup.py develop
         - pip install -r requirements-test.txt
