--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ script:
                     --cov tests \
                     --durations=10
         # Code quality check
-        - flake8 spalloc tests
+        - flake8
 after_success:
         - coveralls
 notifications:
