--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ script:
             py.test tests/ \
                     --cov spalloc \
                     --cov tests \
-                    --durations=10
+                    --durations=10 \
+                    --timeout=120
         # Code quality check
         - flake8
 after_success:
