--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 sudo: false
 language: python
-python: 2.7
+python:
+        - 2.7
+        - 3.4
+        - 3.5
 install:
         - python setup.py develop
         - pip install -r requirements-test.txt
