--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
-sudo: false
 language: python
 python:
         - 2.7
         - 3.4
         - 3.5
+        - 3.6
+dist: trusty
 cache: pip
 before_install:
         - pip install --upgrade pip setuptools wheel
