--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_install:
 install:
         - python setup.py develop
         - pip install -r requirements-test.txt
-        - pip install python-coveralls
+        - pip install python-coveralls 'coverage>=4.4'
 script:
         - py.test tests/ --cov spalloc --cov tests --durations=10 --timeout=120
         # Code quality check
