--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,7 +1,7 @@
 # Test suite requirements
 -r requirements.txt
-pytest>=2.8
-pytest-cov
+pytest
+# pytest will be brought in by pytest-cov
 pytest-timeout<1.3
 flake8
 mock
