--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,6 +1,6 @@
 # Test suite requirements
 -r requirements.txt
-pytest
+pytest-cov
 # pytest will be brought in by pytest-cov
 pytest-timeout<1.3
 flake8
