Start doing RAT enforcement. Incomplete

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,54 @@
+# Copyright (c) 2017-2019 The University of Manchester
+#
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
 language: python
 python:
-        - 2.7
-        - 3.4
-        - 3.5
-        - 3.6
-dist: trusty
+    - 2.7
+    - 3.5
+    - 3.6
+    - 3.7
+dist: xenial
 matrix:
-  include:
-    - python: 3.7
-      dist: xenial
-      sudo: true
+    include:
+        -   python: 3.4
+            dist: trusty
+addons:
+    apt:
+        packages:
+            - openjdk-8-jre-headless
+            - ant
 cache: pip
 before_install:
-        - pip install --upgrade pip setuptools wheel
+    # Work around ludicrous Travis bug
+    - git clone https://github.com/SpiNNakerManchester/SupportScripts.git support
+    - python support/travis_blocking_stdout.py
+    - support/rat.sh download
+    - pip install --upgrade pip setuptools wheel
 install:
-        - python setup.py develop
-        - pip install -r requirements-test.txt
-        - pip install python-coveralls 'coverage>=4.4'
+    - python setup.py develop
+    - pip install -r requirements-test.txt
+    - pip install python-coveralls 'coverage>=4.4'
 script:
-        - py.test tests/ --cov spalloc --cov tests --durations=10 --timeout=120
-        # Code quality check
-        - flake8
+    - py.test tests/ --cov spalloc --cov tests --durations=10 --timeout=120
+    # Code quality check
+    - flake8
+    - support/rat.sh run
 after_success:
-        - coveralls
+    - coveralls
 notifications:
-        email: false
+    email: false
 
 matrix:
-        fast_finish: true
+    fast_finish: true
