--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -15,6 +15,7 @@
 
 # Test suite requirements
 -r requirements.txt
+coverage >= 4.4, < 5.0
 pytest-cov
 # pytest will be brought in by pytest-cov
 pytest-timeout
