--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ before_install:
 install:
     - python setup.py develop
     - pip install -r requirements-test.txt
-    - pip install pylint python-coveralls 'coverage>=4.4,<5.0'
+    - pip install 'pylint<2.5' python-coveralls 'coverage>=4.4,<5.0'
 script:
     - py.test tests/ --cov spalloc --cov tests --durations=10 --timeout=120
     # Code quality check
