--- a/.travis.yml
+++ b/.travis.yml
@@ -45,6 +45,8 @@ before_install:
     - python support/travis_blocking_stdout.py
     - support/rat.sh download
     - pip install --upgrade pip setuptools wheel
+    # SpiNNakerManchester internal dependencies; development mode
+    - support/pipinstall.sh git://github.com/SpiNNakerManchester/SpiNNUtils.git
 install:
     - python setup.py develop
     - pip install -r requirements-test.txt
