--- a/.github/workflows/python_actions.yml
+++ b/.github/workflows/python_actions.yml
@@ -17,9 +17,7 @@
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
 name: Python Build
-
 on: [push]
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -32,7 +30,6 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-
     - name: Checkout
       uses: actions/checkout@v2
     - name: Checkout SupportScripts
@@ -41,56 +38,24 @@ jobs:
         repository: SpiNNakerManchester/SupportScripts
         path: support
 
-    - name: Checkout SpiNNaker dependencies
-      run: |
-        support/gitclone2.sh https://github.com/SpiNNakerManchester/SpiNNUtils.git
-
-    - name: Install pip and code quality tools
-      run: |
-        python -m pip install --upgrade pip
-        pip install 'pylint<2.5' python-coveralls 'coverage>=4.4,<5.0'
-
-    - name: Install SpiNNUtils
-      run: python setup.py install
-      working-directory: SpiNNUtils
-
-    - name: Install
-      run: |
-        python setup.py develop
-        pip install -r requirements-test.txt
+    - name: Install pip, etc
+      uses: ./support/actions/python-tools
+    - name: Install Spinnaker Dependencies
+      uses: ./support/actions/checkout-spinn-deps
+      with:
+        repositories: SpiNNUtils
+        install: true
+    - name: Setup
+      uses: ./support/actions/run-setup
 
     - name: Test with pytest and coverage
       if: matrix.python-version == 3.6
       run: |
         py.test tests/ --cov spalloc --cov tests --durations=10 --timeout=120
-
     - name: Test with pytest
       if: matrix.python-version != 3.6
       run: |
         py.test tests/ --durations=10 --timeout=120
-
-    - name: Lint with flake8
-      run: |
-        flake8 spalloc tests
-
-    - name: Lint with pylint
-      # Note that there's special conditioning of the return code of pylint
-      run: |
-        pylint --output-format=colorized --disable=R,C spalloc || exit $(($? & 35))
-
-    - name: Run rat copyright enforcement
-      if: matrix.python-version == 3.6
-      run: |
-        support/rat.sh download
-        support/rat.sh run
-
-    - name: Build documentation with sphinx
-      if: matrix.python-version == 3.6
-      run: |
-        pip install -r requirements-docs.txt
-        cd docs/source
-        sphinx-build -W -T -E -b html -d _build/doctrees-readthedocsdirhtml -D language=en . _build/html
-
     - name: Run coveralls and report coverage
       if: matrix.python-version == 3.6
       env:
@@ -98,3 +63,19 @@ jobs:
         COVERALLS_REPO_TOKEN : ${{ secrets.COVERALLS_REPO_TOKEN }}
         NODE_COVERALLS_DEBUG: 1
       run: coveralls
+
+    - name: Lint with flake8
+      run: flake8 spalloc tests
+    - name: Lint with pylint
+      uses: ./support/actions/pylint
+      with: 
+        package: spalloc
+
+    - name: Run rat copyright enforcement
+      if: matrix.python-version == 3.6
+      uses: ./support/actions/check-copyrights
+    - name: Build documentation with sphinx
+      if: matrix.python-version == 3.6
+      uses: ./support/actions/sphinx
+      with:
+        directory: doc/source
