Of course this is different

--- a/.github/workflows/python_actions.yml
+++ b/.github/workflows/python_actions.yml
@@ -78,4 +78,4 @@ jobs:
       if: matrix.python-version == 3.6
       uses: ./support/actions/sphinx
       with:
-        directory: doc/source
+        directory: docs/source
