--- a/.github/workflows/python_actions.yml
+++ b/.github/workflows/python_actions.yml
@@ -47,6 +47,8 @@ jobs:
         install: true
     - name: Setup
       uses: ./support/actions/run-setup
+    - name: Extra setup
+      run: pip install -r requirements-doc.txt
 
     - name: Test with pytest and coverage
       if: matrix.python-version == 3.6
