--- a/.github/workflows/python_actions.yml
+++ b/.github/workflows/python_actions.yml
@@ -50,21 +50,14 @@ jobs:
     - name: Extra setup
       run: pip install -r requirements-docs.txt
 
-    - name: Test with pytest and coverage
-      if: matrix.python-version == 3.6
-      run: |
-        py.test tests/ --cov spalloc --cov tests --durations=10 --timeout=120
     - name: Test with pytest
-      if: matrix.python-version != 3.6
-      run: |
-        py.test tests/ --durations=10 --timeout=120
-    - name: Run coveralls and report coverage
-      if: matrix.python-version == 3.6
-      env:
-        COVERALLS_SERVICE_NAME: 'GitHub CI'
-        COVERALLS_REPO_TOKEN : ${{ secrets.COVERALLS_REPO_TOKEN }}
-        NODE_COVERALLS_DEBUG: 1
-      run: coveralls
+      uses: ./support/actions/pytest
+      with:
+        tests: unittests
+        options: --durations=10 --timeout=120
+        coverage: ${{ matrix.python-version == 3.6 }}
+        cover-packages: spalloc tests
+        coveralls-token: ${{ secrets.COVERALLS_REPO_TOKEN }}
 
     - name: Lint with flake8
       run: flake8 spalloc tests
