--- a/tox.ini
+++ b/tox.ini
@@ -14,7 +14,7 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 [tox]
-envlist = py27, py34, py35, pep8
+envlist = py36, pep8
 
 [testenv]
 passenv=
