--- a/.github/workflows/python_actions.yml
+++ b/.github/workflows/python_actions.yml
@@ -23,7 +23,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8]
+        python-version: [3.6, 3.7, 3.8, 3.9]
 
     steps:
     - name: Set up Python ${{ matrix.python-version }}
@@ -55,7 +55,7 @@ jobs:
       with:
         tests: tests
         options: --durations=10 --timeout=120
-        coverage: ${{ matrix.python-version == 3.6 }}
+        coverage: ${{ matrix.python-version == 3.8 }}
         cover-packages: spalloc tests
         coveralls-token: ${{ secrets.COVERALLS_REPO_TOKEN }}
 
@@ -67,10 +67,11 @@ jobs:
         package: spalloc
 
     - name: Run rat copyright enforcement
-      if: matrix.python-version == 3.6
+      if: matrix.python-version == 3.8
       uses: ./support/actions/check-copyrights
+
     - name: Build documentation with sphinx
-      if: matrix.python-version == 3.6
+      if: matrix.python-version == 3.8
       uses: ./support/actions/sphinx
       with:
         directory: docs/source
