I seem to find it difficult to copy a filename, today.

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -24,4 +24,4 @@ formats: [pdf]  # This is ADDITIONAL to HTML
 python:
   version: 3.8
   install:
-    - requirements: requirements_docs.txt
+    - requirements: requirements-docs.txt
