--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -17,7 +17,7 @@ version: 2
 build:
   image: latest
 sphinx:
-  configuration: doc/source/conf.py
+  configuration: docs/source/conf.py
   builder: dirhtml
   fail_on_warning: false
 formats: [pdf]  # This is ADDITIONAL to HTML
