--- a/.github/workflows/python_actions.yml
+++ b/.github/workflows/python_actions.yml
@@ -57,7 +57,7 @@ jobs:
         options: --durations=10 --timeout=120
         coverage: ${{ matrix.python-version == 3.8 }}
         cover-packages: spalloc tests
-        coveralls-token: ${{ secrets.COVERALLS_REPO_TOKEN }}
+        coveralls-token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Lint with flake8
       run: flake8 spalloc tests
