--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,4 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 appdirs
-SpiNNUtilities >= 1!5.1.1, < 1!6.0.0
+SpiNNUtilities == 1!6.0.1
