--- a/.github/workflows/python_actions.yml
+++ b/.github/workflows/python_actions.yml
@@ -65,6 +65,7 @@ jobs:
       uses: ./support/actions/pylint
       with: 
         package: spalloc
+        exitcheck: 39
 
     - name: Run rat copyright enforcement
       if: matrix.python-version == 3.8
