swap to pyproject.toml

--- a/.github/workflows/python_actions.yml
+++ b/.github/workflows/python_actions.yml
@@ -40,12 +40,14 @@ jobs:
     - name: Install pip, etc
       uses: ./support/actions/python-tools
     - name: Install Spinnaker Dependencies
-      uses: ./support/actions/checkout-spinn-deps
+      uses: ./support/actions/install-spinn-deps
       with:
         repositories: SpiNNUtils
         install: true
-    - name: Setup
-      uses: ./support/actions/run-setup
+
+    - name: Install
+      uses: ./support/actions/run-install
+
     - name: Extra setup
       run: pip install -r requirements-docs.txt
 
@@ -62,7 +64,7 @@ jobs:
       run: flake8 spalloc tests
     - name: Lint with pylint
       uses: ./support/actions/pylint
-      with: 
+      with:
         package: spalloc
         exitcheck: 39
 
