rename spalloc spalloc_client

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,7 +14,7 @@
 
 [metadata]
 name = spalloc
-version = attr: spalloc._version.__version__
+version = attr: spalloc_client._version.__version__
 description = A client for the spalloc_server SpiNNaker machine partitioning and allocation system.
 #long_description = file: README.rst
 #long_description_content_type = text/x-rst
