--- a/setup.cfg
+++ b/setup.cfg
@@ -52,6 +52,11 @@ install_requires =
         jsonschema
         SpiNNUtilities == 1!6.0.1
 
+[options.packages.find]
+include =
+        spalloc_client
+        spalloc_client.*
+
 [options.extras_require]
 test =
         # pytest will be brought in by pytest-cov
