Add entry points back in

--- a/setup.cfg
+++ b/setup.cfg
@@ -62,3 +62,11 @@ test =
         # pytest will be brought in by pytest-cov
         pytest-cov
         mock
+
+[options.entry_points]
+console_scripts =
+    spalloc = spalloc_client.scripts.alloc:main
+    spalloc-ps = spalloc_client.scripts.ps:main
+    spalloc-job = spalloc_client.scripts.job:main
+    spalloc-machine = spalloc_client.scripts.machine:main
+    spalloc-where-is = spalloc_client.scripts.where_is:main
