enable long description

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,8 +16,8 @@
 name = spalloc
 version = attr: spalloc_client._version.__version__
 description = A client for the spalloc_server SpiNNaker machine partitioning and allocation system.
-#long_description = file: README.rst
-#long_description_content_type = text/x-rst
+long_description = file: README.rst
+long_description_content_type = text/x-rst
 url = https://github.com/SpiNNakerManchester/spalloc
 license = Apache-2.0
 classifiers =
