--- a/.github/workflows/python_actions.yml
+++ b/.github/workflows/python_actions.yml
@@ -23,7 +23,7 @@ jobs:
     timeout-minutes: 10
     strategy:
       matrix:
-        python-version: [3.8, 3.9, "3.10", "3.11"]
+        python-version: [3.8, 3.9, "3.10", "3.11", "3.12"]
 
     steps:
     - name: Set up Python ${{ matrix.python-version }}
@@ -60,7 +60,7 @@ jobs:
       with:
         tests: tests
         options: --durations=10 --timeout=120
-        coverage: ${{ matrix.python-version == 3.8 }}
+        coverage: ${{ matrix.python-version == 3.12 }}
         cover-packages: spalloc tests
         coveralls-token: ${{ secrets.GITHUB_TOKEN }}
 
@@ -74,17 +74,17 @@ jobs:
         exitcheck: 39
 
     - name: Run rat copyright enforcement
-      if: matrix.python-version == 3.8
+      if: matrix.python-version == 3.12
       uses: ./support/actions/check-copyrights
       with:
         config_file: rat_asl20.xml
 
     - name: Build documentation with sphinx
-      if: matrix.python-version == 3.8
+      if: matrix.python-version == 3.12
       uses: ./support/actions/sphinx
       with:
         directory: docs/source
 
     - name: Validate CITATION.cff
-      if: matrix.python-version == 3.8
+      if: matrix.python-version == 3.12
       uses: dieghernan/cff-validator@main
