--- a/setup.cfg
+++ b/setup.cfg
@@ -62,6 +62,7 @@ test =
         # pytest will be brought in by pytest-cov
         pytest-cov
         mock
+        types-appdirs
 
 [options.entry_points]
 console_scripts =
