--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -15,12 +15,13 @@
 version: 2
 build:
   os: ubuntu-22.04
+  tools:
+    python: "3.11"
 sphinx:
   configuration: docs/source/conf.py
   builder: dirhtml
   fail_on_warning: false
 formats: [pdf]  # This is ADDITIONAL to HTML
 python:
-  version: 3.12
   install:
     - requirements: requirements-docs.txt
